compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__type_named_else.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 710
expression: "\npub type Else {\n  Else\n}\n\npub fn main() {\n  Else\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Else {
  Else
}

pub fn main() {
  Else
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type(['else'/0]).

-type 'else'() :: 'else'.

-file("project/test/my/mod.gleam", 6).
-spec main() -> 'else'().
main() ->
    'else'.
