compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__type_named_module_info.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 726
expression: "\npub type ModuleInfo {\n    ModuleInfo\n}\n\npub fn main() {\n    ModuleInfo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type ModuleInfo {
    ModuleInfo
}

pub fn main() {
    ModuleInfo
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type([module_info/0]).

-type module_info() :: module_info.

-file("project/test/my/mod.gleam", 6).
-spec main() -> module_info().
main() ->
    module_info.
